# cryptopals

./: Cargo.toml
proptest-regressions/: aes.txt  base64.txt  freqs.txt  pkcs7.txt
src/: aes.rs  base64.rs  detect.rs  freqs.rs  hamming.rs  hex.rs  lib.rs  pkcs7.rs  random.rs  strs.rs  xor.rs
tests/: cp01.rs  cp02.rs  cp03.rs  cp04.rs  cp05.rs  cp06.rs  cp07.rs  cp08.rs  cp09.rs  cp10.rs
tests/challenges/: cp02.rs  cp04.rs  cp07.rs  cp08.rs  cp09.rs  cp10.rs  cp11.rs  cp12.rs  cp13.rs  cp14.rs  cp15.rs  cp16.rs  cp17.rs  main.rs
tests/proptest-regressions/: cp11.txt
