[package]
name = "cryptopals"
version = "0.0.0"
edition = "2021"
authors = ["mbp@sourcefrog.net"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
bytes = "1.1.0"
eyre = "*"
lazy_static = "1.4.0"
proptest = "1.0.0"
rand = "0.8.5"
